// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectIUCNForm renders correctly with default empty values 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications *
  </legend>
  <div
    class="MuiBox-root MuiBox-root-4"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-learnMoreBtn-3 MuiButton-textPrimary"
        data-testid="prop-dialog-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiTypography-root MuiTypography-body1"
          >
            Learn more.
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-5"
  >
    <div
      class="MuiBox-root MuiBox-root-6"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-7 makeStyles-iucnInputContainer-1"
      >
        <div
          class="MuiBox-root MuiBox-root-8 makeStyles-iucnInput-2"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
              id="classification"
            >
              Classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[0].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].classification"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].classification"
                required=""
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-11"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-13"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-14 makeStyles-iucnInput-2"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
              id="subClassification1"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-formControl"
            >
              <div
                aria-disabled="true"
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[0].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled Mui-disabled"
                id="iucn.classificationDetails.[0].subClassification1"
                role="button"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification1"
                required=""
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined Mui-disabled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-11"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-15"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-16 makeStyles-iucnInput-2"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
              id="subClassification2"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-formControl"
            >
              <div
                aria-disabled="true"
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[0].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled Mui-disabled"
                id="iucn.classificationDetails.[0].subClassification2"
                role="button"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification2"
                required=""
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined Mui-disabled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-11"
                >
                  <span>
                    Sub-classification2
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error Mui-required"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-17"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with error on the iucn classification individual fields 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications *
  </legend>
  <div
    class="MuiBox-root MuiBox-root-105"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-learnMoreBtn-104 MuiButton-textPrimary"
        data-testid="prop-dialog-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiTypography-root MuiTypography-body1"
          >
            Learn more.
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-106"
  >
    <div
      class="MuiBox-root MuiBox-root-107"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-108 makeStyles-iucnInputContainer-102"
      >
        <div
          class="MuiBox-root MuiBox-root-109 makeStyles-iucnInput-103"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="classification"
            >
              Classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[0].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].classification"
                required=""
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-110 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-112 PrivateNotchedOutline-legendNotched-113"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-114"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-115 makeStyles-iucnInput-103"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[0].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification1"
                required=""
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-110 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-112 PrivateNotchedOutline-legendNotched-113"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-116"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-117 makeStyles-iucnInput-103"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[0].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification2"
                required=""
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-110 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-112 PrivateNotchedOutline-legendNotched-113"
                >
                  <span>
                    Sub-classification2
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-118"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with error on the iucn classifications due to duplicates 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications *
  </legend>
  <div
    class="MuiBox-root MuiBox-root-80"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-learnMoreBtn-79 MuiButton-textPrimary"
        data-testid="prop-dialog-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiTypography-root MuiTypography-body1"
          >
            Learn more.
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-81"
  >
    <div
      class="MuiBox-root MuiBox-root-82"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-83 makeStyles-iucnInputContainer-77"
      >
        <div
          class="MuiBox-root MuiBox-root-84 makeStyles-iucnInput-78"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="classification"
            >
              Classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[0].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].classification"
                required=""
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-85 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-87 PrivateNotchedOutline-legendNotched-88"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-89"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-90 makeStyles-iucnInput-78"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[0].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification1"
                required=""
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-85 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-87 PrivateNotchedOutline-legendNotched-88"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-91"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-92 makeStyles-iucnInput-78"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[0].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification2"
                required=""
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-85 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-87 PrivateNotchedOutline-legendNotched-88"
                >
                  <span>
                    Sub-classification2
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-93"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-94 makeStyles-iucnInputContainer-77"
      >
        <div
          class="MuiBox-root MuiBox-root-95 makeStyles-iucnInput-78"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="classification"
            >
              Classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[1].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[1].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[1].classification"
                required=""
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-85 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-87 PrivateNotchedOutline-legendNotched-88"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-96"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-97 makeStyles-iucnInput-78"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[1].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[1].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[1].subClassification1"
                required=""
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-85 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-87 PrivateNotchedOutline-legendNotched-88"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-98"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-99 makeStyles-iucnInput-78"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[1].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[1].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[1].subClassification2"
                required=""
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-85 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-87 PrivateNotchedOutline-legendNotched-88"
                >
                  <span>
                    Sub-classification2
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-100"
      >
        <button
          aria-label="delete"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-101"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with existing details values 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications *
  </legend>
  <div
    class="MuiBox-root MuiBox-root-21"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-learnMoreBtn-20 MuiButton-textPrimary"
        data-testid="prop-dialog-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiTypography-root MuiTypography-body1"
          >
            Learn more.
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-22"
  >
    <div
      class="MuiBox-root MuiBox-root-23"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-24 makeStyles-iucnInputContainer-18"
      >
        <div
          class="MuiBox-root MuiBox-root-25 makeStyles-iucnInput-19"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="classification"
            >
              Classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[0].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].classification"
                required=""
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-26 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-28 PrivateNotchedOutline-legendNotched-29"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-30"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-31 makeStyles-iucnInput-19"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[0].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification1"
                required=""
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-26 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-28 PrivateNotchedOutline-legendNotched-29"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-32"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-33 makeStyles-iucnInput-19"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[0].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification2"
                required=""
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-26 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-28 PrivateNotchedOutline-legendNotched-29"
                >
                  <span>
                    Sub-classification2
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-34"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
